# plodwave

./: .gitignore  README.md  pyproject.toml
examples/example_1/: main.py  setup_coefficient.py
examples/example_2/: main.py
examples/example_2_1/: main.py
examples/example_2_2/: main.py  plot_coefficient.py  setup_coefficient.py
examples/example_3/: main.py  plot_coefficient.py  setup_coefficient.py
src/plodwave/: __init__.py  config.py  corrector.py  exceptions.py  fem.py  indices.py  interpolation.py  legendre.py  mesh.py  patch.py  problem.py  solution.py  solver.py  stabilization.py
